<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_top_offers"
        android:icon="@drawable/offers"
        android:title="@string/title_offers" />

    <item
        android:id="@+id/navigation_my_cart"
        android:icon="@drawable/cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user2"
        android:title="@string/title_profile" />

</menu>
